add:Galery, clientelle and testimonial sections added. A couple of minor fixes here and there as well

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  overflow-x: hidden;
+}
+
+.scroller[data-animated='true'] {
+  overflow: hidden;
+
+  -webkit-mask: linear-gradient(
+    90deg,
+    transparent,
+    white 20%,
+    white 80%,
+    transparent
+  );
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+.scroller[data-animated='true'] .scroller__inner {
+  flex-wrap: nowrap !important;
+  width: max-content;
+}
