updates:UI updates implemented, FB link updated and album covers updated

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,11 @@
   flex-wrap: nowrap !important;
   width: max-content;
 }
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+
+.-rotate-y-180 {
+  transform: rotateY(-180deg);
+}
