--- a/app/globals.css
+++ b/app/globals.css
@@ -31,26 +31,16 @@
 }
 
 .my-masonry-grid {
-  display: -webkit-box; /* Not needed if autoprefixing */
-  display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
-  margin-left: -30px; /* gutter size offset */
-  width: auto;
+  margin-left: -20px;
 }
 .my-masonry-grid_column {
-  padding-left: 30px; /* gutter size */
   background-clip: padding-box;
 }
 
 /* Style your items */
 .my-masonry-grid_column > div {
-  /* change div to reference your elements you put in <Masonry> */
-  background: grey;
-  margin-bottom: 30px;
-}
-
-.grid-rows-masonry {
-  grid-template-rows: masonry;
+  margin-bottom: 20px;
 }
 
 .grid-template-stack {
@@ -123,5 +113,62 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+/* Large desktop and up */
+@media (min-width: 1200px) {
+  .my-masonry-grid {
+    margin-left: -40px; /* wider gutter for very large screens */
+  }
+  .my-masonry-grid_column {
+    padding-left: 40px;
+  }
+  .my-masonry-grid_column > div {
+    margin-bottom: 40px;
+  }
+}
+
+/* Medium desktop screens */
+@media (max-width: 1199px) and (min-width: 992px) {
+  /* Default desktop values work well here */
+}
+
+/* Small desktop and tablet landscape */
+@media (max-width: 991px) and (min-width: 768px) {
+  .my-masonry-grid {
+    margin-left: -25px;
+  }
+  .my-masonry-grid_column {
+    padding-left: 25px;
+  }
+  .my-masonry-grid_column > div {
+    margin-bottom: 25px;
+  }
+}
+
+/* Tablet portrait */
+@media (max-width: 767px) and (min-width: 576px) {
+  .my-masonry-grid {
+    margin-left: -20px;
+  }
+  .my-masonry-grid_column {
+    padding-left: 20px;
+  }
+  .my-masonry-grid_column > div {
+    margin-bottom: 20px;
+  }
+}
+
+/* Mobile phones */
+@media (max-width: 575px) {
+  .my-masonry-grid {
+    margin-left: -15px;
+  }
+  .my-masonry-grid_column {
+    padding-left: 15px;
+  }
+  .my-masonry-grid_column > div {
+    margin-bottom: 15px;
   }
 }
